
syntax = "proto3";
package main;

option java_package = "care.solve.blockchain.entity.proto";
option java_outer_classname = "BlockchainProtos";

option go_package = "main";

enum Functions {
    GET_EVENT = 0;
    SAVE_EVENT = 1;
    GET_USER_PROFILE = 2;
    SAVE_USER_PROFILE = 3;
}

message Event {
    string id = 1;
    uint64 timestamp = 2;
    string type = 3;
    string source = 4;
    string data = 5;
}

message UserProfile {
    string userId = 1;
    EncryptedData encryptedData = 2;
}

message EncryptedData {
    string encryptedPayload = 1;
    string cbcInitialVector = 2;
}
